--- a/catch-of-the-day/src/css/_animations.styl
+++ b/catch-of-the-day/src/css/_animations.styl
@@ -5,3 +5,35 @@
   appear Must set transitionAppear={true} on animation component
 */
 
+.order-enter
+  transition all 0.5s /* match with transitionEnterTimeout so it a seemless transition */
+  transform translateX(-120%) /* start hidden on left */
+  max-height 0 /* start small and grow as transitioning */
+  padding 0 !important
+  &.order-enter-active
+    max-height 60px /* increase height as transiting in */
+    padding 2rem 0 !important
+    transform translateX(0) /* come to middle */
+
+.order-leave
+  transition all 0.5s /* match the transitionLeaveTimeout so its same transition as leave -> active */
+  transform translateX(0) /* from center */
+  &.order-leave-active
+    transform translateX(120%) /* go right */
+    max-height 0 /* decrease height as transitioning out */
+    padding 0
+
+.count-enter
+  transition all 0.25s
+  transform translateY(100%)
+  &.count-enter-active
+    transform translateY(0)
+
+.count-leave
+  transition all 0.25s
+  position absolute
+  left 0
+  bottom 0
+  transform translateY(0)
+  &.count-leave-active
+    transform translateY(-100%)
